fix the overflow of bars

--- a/src/assets/scss/_eventLine.scss
+++ b/src/assets/scss/_eventLine.scss
@@ -70,6 +70,9 @@
             @apply font-semibold uppercase;
           }
         }
+        .ant-card-body{
+          @apply overflow-x-auto;
+        }
       }
     }
     .rang-slider {
